--- a/app/src/main/res/layout/activity_triangulo.xml
+++ b/app/src/main/res/layout/activity_triangulo.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/_8706326_rm251_mind_01_f"
+    android:background="@drawable/perro_jake"
     tools:context=".TriangulosActivity">
 
     <EditText
         android:id="@+id/txtBase"
-        android:layout_width="102dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="188dp"
+        android:layout_width="282dp"
+        android:layout_height="126dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="364dp"
         android:ems="10"
         android:inputType="text"
         android:textColor="@color/white"
@@ -20,11 +20,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/lblBase"
+        android:layout_width="80dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="184dp"
+        android:text="Base"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/txtBase"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.914" />
+
+    <TextView
         android:id="@+id/lblTitulo"
         android:layout_width="246dp"
         android:layout_height="30dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="92dp"
         android:text="Area de los Triangulos"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -33,10 +47,10 @@
 
     <EditText
         android:id="@+id/txtAltura"
-        android:layout_width="103dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="256dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="156dp"
         android:ems="10"
         android:inputType="text"
         android:textColor="@color/white"
@@ -45,9 +59,9 @@
 
     <TextView
         android:id="@+id/lblAltura"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_width="87dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="132dp"
         android:text="Altura"
         android:textColor="@color/white"
@@ -55,18 +69,27 @@
         app:layout_constraintBottom_toBottomOf="@+id/txtAltura"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.909" />
+        app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/lblBase"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="184dp"
-        android:text="Base"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txtBase"
+    <Button
+        android:id="@+id/btnEscaleno"
+        android:layout_width="134dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="276dp"
+        android:layout_marginTop="504dp"
+        android:onClick="CalcularEscaleno"
+        android:text="Escaleno"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnIsoceles"
+        android:layout_width="136dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="504dp"
+        android:onClick="CalcularIsoceles"
+        android:text="Isoceles"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -74,21 +97,10 @@
         android:id="@+id/btnEquilatero"
         android:layout_width="127dp"
         android:layout_height="66dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="316dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="504dp"
         android:onClick="CalcularEquilatero"
         android:text="Equilatero"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnEscaleno"
-        android:layout_width="134dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="316dp"
-        android:onClick="CalcularEscaleno"
-        android:text="Escaleno"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -96,30 +108,19 @@
         android:id="@+id/lblResultado"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="84dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.597" />
-
-    <Button
-        android:id="@+id/btnIsoceles"
-        android:layout_width="136dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="316dp"
-        android:onClick="CalcularIsoceles"
-        android:text="Isoceles"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintVertical_bias="0.862" />
 
     <Button
         android:id="@+id/btnRegresar"
-        android:layout_width="120dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
+        android:layout_width="174dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
         android:text="Regresar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
