--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/_8706326_rm251_mind_01_f"
+    android:background="@drawable/fondo_app"
     tools:context=".MenuOperaciones">
 
     <TextView
@@ -41,6 +41,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="108dp"
         android:text="NUMEROS PERFECTOS"
+        app:backgroundTint="#03A9F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintHorizontal_weight="1"
@@ -55,6 +56,7 @@
         android:layout_marginTop="672dp"
         android:onClick="fibonacci"
         android:text="FIBONACCI"
+        app:backgroundTint="#03A9F4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -70,6 +72,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="216dp"
         android:text="FORMULA GENERAL"
+        app:backgroundTint="#3F51B5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/btnOperacionesBasicas"
@@ -82,6 +85,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="400dp"
         android:text="TRAPECIO"
+        app:backgroundTint="#3F51B5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.285"
         app:layout_constraintHorizontal_weight="1"
@@ -95,6 +99,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="216dp"
         android:text="OPERACIONES BASICAS"
+        app:backgroundTint="#3F51B5"
         app:layout_constraintEnd_toStartOf="@+id/btnformulageneral"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,6 +113,7 @@
         android:layout_marginTop="568dp"
         android:onClick="pitagoras"
         android:text="PITAGORAS"
+        app:backgroundTint="#3F51B5"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -119,6 +125,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="400dp"
         android:text="AREA TRIANGULO"
+        app:backgroundTint="#3F51B5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -129,6 +136,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="476dp"
         android:text="NUMEROS PRIMOS"
+        app:backgroundTint="#03A9F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.989"
         app:layout_constraintHorizontal_weight="1"
@@ -142,6 +150,7 @@
         android:layout_marginTop="568dp"
         android:layout_marginEnd="12dp"
         android:text="NUMEROS PRIMOS"
+        app:backgroundTint="#3F51B5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintTop_toTopOf="parent" />
@@ -153,6 +162,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="476dp"
         android:text="PENTAGONO"
+        app:backgroundTint="#03A9F4"
         app:layout_constraintEnd_toStartOf="@+id/btnNPrimos"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
@@ -165,6 +175,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="108dp"
         android:text="TRINOMIO-MONOMIO"
+        app:backgroundTint="#03A9F4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -175,6 +186,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="312dp"
         android:text="OPERACION FACTORIAL"
+        app:backgroundTint="#03A9F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/btn_aldaz"
@@ -187,6 +199,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="312dp"
         android:text="EXPONENCIALES"
+        app:backgroundTint="#03A9F4"
         app:layout_constraintEnd_toStartOf="@+id/btnJefersonY"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
