--- a/app/src/main/res/layout/activity_multiplicacion_monomios.xml
+++ b/app/src/main/res/layout/activity_multiplicacion_monomios.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/_8706326_rm251_mind_01_f"
+    android:background="@drawable/perro_jake"
     tools:context=".MultiplicacionMonomios">
 
     <Button
@@ -44,7 +44,7 @@
         android:fontFamily="serif-monospace"
         android:text="RESPUESTA"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +72,7 @@
         android:ems="10"
         android:fontFamily="sans-serif-condensed-light"
         android:inputType="text"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="numero" />
@@ -86,7 +86,7 @@
         android:ems="10"
         android:fontFamily="sans-serif-condensed-light"
         android:inputType="text"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="numero" />
