--- a/app/src/main/res/layout/activity_teorema_pitagoras.xml
+++ b/app/src/main/res/layout/activity_teorema_pitagoras.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E7F4FA"
+    android:background="@drawable/perro_jake"
     android:onClick="calcula"
     tools:context=".teoremaPitagoras">
 
