--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/_8706326_rm251_mind_01_f"
     tools:context=".MenuOperaciones">
 
+
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="259dp"
@@ -184,11 +185,13 @@
         android:id="@+id/btn_aldaz"
         android:layout_width="191dp"
         android:layout_height="81dp"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="301dp"
-        app:layout_constraintEnd_toStartOf="@+id/btnJefersonY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.018"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.443" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
