--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="colorPrimary">#FF000000</color> <!-- Cambiado a negro -->
+    <color name="colorFondo">#FF000000</color> <!-- Negro -->
+    <color name="colorPrimaryVariant">#FF000000</color> <!-- También negro -->
+    <color name="colorOnPrimary">#FFFFFFFF</color> <!-- Blanco para el texto sobre negro -->
+
+    <color name="colorSecondary">#FFFFA500</color> <!-- Anaranjado -->
+    <color name="colorSecondaryVariant">#FFFF8C00</color> <!-- Anaranjado más oscuro -->
+    <color name="colorOnSecondary">#FF000000</color> <!-- Negro para el texto sobre anaranjado -->
+
+    <!-- Otros colores existentes -->
+    <color name="purple_200">#FFFFA500</color>
+    <color name="purple_500">#FFFFA500</color>
+    <color name="purple_700"> #FFFFA500</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
